--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,4 +24,4 @@ jobs:
         cache: maven
     - name: Build with Maven
       # run: mvn -B package --file pom.xml
-      run: mvn compile exec:java -Dexec.mainClass=com.mycompany.app.Example
+      run: mvn -X compile exec:java -Dexec.mainClass=com.mycompany.app.Example
