--- a/.github/workflows/test_docker.yml
+++ b/.github/workflows/test_docker.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Build Docker image
-        run: docker build -t playwright-java:localbuild-focal -f Dockerfile.focal .
+        run: docker build -t ghcr.io/agaramudhala/pw-docker:main -f.
       - name: Test
         run: |
-          CONTAINER_ID="$(docker run --rm --ipc=host -v $(pwd):/root/playwright --name playwright-docker-test -d -t playwright-java:localbuild-focal /bin/bash)"
+          CONTAINER_ID="$(docker run --rm --ipc=host -v $(pwd):/root/playwright --name playwright-docker-test -d -t ghcr.io/agaramudhala/pw-docker:main /bin/bash)"
           docker exec "${CONTAINER_ID}" /root/playwright/tools/test-local-installation/create_project_and_run_tests.sh
